# aws_typing

./: .gitignore  CLAUDE.md  LICENSE  README.md  aws_typing_game.py  justfile  pyproject.toml
assets/music/: README.txt
assets/sounds/: README.txt
docs/: README.md  api-reference.md  architecture.md  project-structure.md
scripts/: dev.py
src/aws_typing_game/: __init__.py  main.py
src/aws_typing_game/core/: config.py  game.py
src/aws_typing_game/data/: __init__.py  aws_services_data.json
src/aws_typing_game/managers/: __init__.py  accessibility_manager.py  animation_manager.py  audio_manager.py  data_manager.py  font_manager.py  responsive_manager.py
src/aws_typing_game/ui/: ui_manager.py
tests/: __init__.py  test_game.py
